--- a/index.html
+++ b/index.html
@@ -13,8 +13,12 @@
         }
 
         body {
-            background-color: #eeeeea;
-        }
+    background-image: url('https://images.unsplash.com/photo-1574169208507-84376144848b?q=80&w=2079&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D'); /* Replace 'your-background-image.jpg' with the path to your desired background image */
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-color: #eeeeea; /* Fallback color in case the image is not available */
+}
 
         .wrapper {
             width: 100%;
