--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
         }
 
         .card[for="c1"] {
-            background-image: url('https://cdn.pixabay.com/photo/2021/12/28/11/38/trees-6899050_1280.jpg');
+            background-image: url('https://github.com/Zami128/Flex-Card/blob/main/326268096_553880710001170_498047588766806375_n.jpg?raw=true');
         }
 
         .card[for="c2"] {
